Fix editor overflow

--- a/src/styles/components/Layout/Layout.module.scss
+++ b/src/styles/components/Layout/Layout.module.scss
@@ -82,6 +82,7 @@
     width: 100%;
     height: 100%;
     background-color: v.$secondary-background-color;
+    overflow-x: hidden;
   }
 }
 
